--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,18 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-
-    <title>Pixie - Ecommerce HTML5 Template</title>
-
+    <title>Open Source eCommerce - Spring Boot</title>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/tooplate-main.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-    <!--
-    Tooplate 2114 Pixie
-    https://www.tooplate.com/view/2114-pixie
-    -->
 </head>
 
 <body>
