--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- Additional Scripts -->
+
+<script src="assets/js/custom.js"></script>
+<script src="assets/js/owl.js"></script>
+
 </body>
 </html>
 
