--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/tooplate-main.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/flex-slider.css">
 </head>
 
 <body>
@@ -25,6 +26,8 @@
 
 <script src="assets/js/custom.js"></script>
 <script src="assets/js/owl.js"></script>
+<script src="assets/js/isotope.js"></script>
+<script src="assets/js/flex-slider.js"></script>
 
 </body>
 </html>
